# sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rk3308.cmake
doc/: Doxyfile
doc/html/: _c_yd_lidar_8h_source.html  _convert_u_t_f_8h_source.html  _simple_ini_8h_source.html  angles_8h_source.html  annotated.html  class_c_simple_ini_templ-members.html  class_c_simple_ini_templ.html  class_c_simple_ini_templ_1_1_converter-members.html  class_c_simple_ini_templ_1_1_converter.html  class_c_simple_ini_templ_1_1_file_writer-members.html  class_c_simple_ini_templ_1_1_file_writer.html  class_c_simple_ini_templ_1_1_output_writer-members.html  class_c_simple_ini_templ_1_1_output_writer.html  class_c_simple_ini_templ_1_1_string_writer-members.html  class_c_simple_ini_templ_1_1_string_writer.html  class_c_yd_lidar-members.html  class_c_yd_lidar.html  class_event-members.html  class_event.html  class_locker-members.html  class_locker.html  class_s_i___convert_a-members.html  class_s_i___convert_a.html  class_s_i___convert_w-members.html  class_s_i___convert_w.html  class_scoped_locker-members.html  class_scoped_locker.html  class_thread-members.html  class_thread.html  classes.html  classline__feature_1_1_line_feature-members.html  (+132 more)
file/: elog_file.c  elog_file.h  elog_file_cfg.h
include/: CYdLidar.h  ChannelDevice.h  Console.h  LogModule.h  SimpleSocket.h  angles.h  help_info.h  locker.h  serial.h  thread.h  thread.h.bak  timer.h  utilities.h  v8stdint.h  ydlidar_cmd.h  ydlidar_def.h  ydlidar_driver.h  ydlidar_protocol.h
samples/: CMakeLists.txt  main.cpp
src/: CYdLidar.cpp  Compensation.cpp  LogModule.cpp  OpenCheck.cpp  SimpleSocket.cpp  common.h  line_feature.cpp  lock.c  serial.cpp  ydlidar_driver.cpp  ydlidar_protocol.cpp
(+38 files in other folders)
